crates/pamoja-ffi/include/pamoja.h

// The result of a fallible pamoja call.
//
// A return of [`PamojaStatus::Ok`] means success; any other value indicates a
// failure whose description is available from [`pamoja_last_error_message`] on
// the same thread.
typedef enum {
  // The call succeeded.
  PamojaStatus_Ok = 0,
  // A transport-level failure while connecting, sending, or receiving.
  PamojaStatus_Transport = 1,
  // A device or peripheral input/output operation failed.
  PamojaStatus_Io = 2,
  // A payload could not be encoded or decoded.
  PamojaStatus_Codec = 3,
  // The operation targeted a resource that is closed or disconnected.
  PamojaStatus_Closed = 4,
  // The requested capability is not compiled into this build.
  PamojaStatus_Unsupported = 5,
  // An argument was null or otherwise invalid, for example non-UTF-8 text.
  PamojaStatus_InvalidArgument = 6,
  // A failure that does not map onto a more specific status.
  PamojaStatus_Other = 7,
  // A Rust panic was caught at the boundary; the call had no effect.
  PamojaStatus_Panic = 8,
  // A security check failed, such as an invalid identity or a bad signature.
  PamojaStatus_Auth = 9,
} PamojaStatus;
// A TMP117 configuration register, field by field.
typedef struct {
  // `1` when a result went above the high limit.
  uint8_t high_alert;
  // `1` when a result went below the low limit.
  uint8_t low_alert;
  // `1` when a conversion has completed since the register was last read.
  uint8_t data_ready;
  // `1` while an EEPROM write is still in progress.
  uint8_t eeprom_busy;
  // The conversion-mode code: `0` continuous, `1` shutdown, `3` one-shot.
  uint8_t mode;
  // The conversion-cycle code, `0..=7`.
  uint8_t cycle;
  // The averaging code, `0..=3`.
  uint8_t averaging;
  // `1` makes the limits a therm hysteresis band rather than alerts.
  uint8_t therm_mode;
  // `1` makes the ALERT pin active high.
  uint8_t alert_active_high;
  // `1` makes the ALERT pin reflect data ready rather than the alert flags.
  uint8_t alert_pin_data_ready;
  // `1` triggers a software reset when this register is written.
  uint8_t soft_reset;
} PamojaTmp117Config;
// A decoded HDC1080 temperature and humidity pair.
typedef struct {
  // The raw temperature register.
  uint16_t temperature_raw;
  // The raw humidity register.
  uint16_t humidity_raw;
  // The temperature in milli-degrees Celsius, exact in integer arithmetic.
  int32_t milli_celsius;
  // The temperature in degrees Celsius.
  float celsius;
  // The relative humidity in milli-percent.
  uint32_t milli_percent;
  // The relative humidity as a percentage.
  float relative_humidity;
} PamojaHdc1080Measurement;
// An HDC1080 configuration register, field by field.
typedef struct {
  // `1` resets the part when this register is written.
  uint8_t software_reset;
  // `1` runs the on-die heater during measurements.
  uint8_t heater;
  // `1` acquires temperature and humidity from one trigger.
  uint8_t sequential;
  // `1` when the supply has dropped below 2.8 V, which the part reports back.
  uint8_t battery_low;
  // The temperature resolution in bits: 14 or 11.
  uint8_t temperature_resolution_bits;
  // The humidity resolution in bits: 14, 11, or 8.
  uint8_t humidity_resolution_bits;
} PamojaHdc1080Config;
// Reports whether a TMP117 configuration register flags a high alert.
//
// # Returns
//
// `true` when a result went above the high limit.
bool pamoja_tmp117_high_alert(uint16_t config);
// Reports whether a TMP117 configuration register flags a low alert.
//
// # Returns
//
// `true` when a result went below the low limit.
bool pamoja_tmp117_low_alert(uint16_t config);
// Reports whether a TMP117 configuration register says a result is ready.
//
// # Returns
//
// `true` when a conversion completed since the register was last read.
bool pamoja_tmp117_data_ready(uint16_t config);
// Reports whether a TMP117 configuration register says an EEPROM write is running.
//
// # Returns
//
// `true` while the write is in progress.
bool pamoja_tmp117_eeprom_busy(uint16_t config);
// Reports whether a TMP117 EEPROM unlock register says a write is running.
//
// # Returns
//
// `true` while the write is in progress.
bool pamoja_tmp117_eeprom_unlock_busy(uint16_t unlock);
// Assembles the 16-bit TMP117 configuration register value.
//
// # Returns
//
// The register value to write.
uint16_t pamoja_tmp117_config_bits(PamojaTmp117Config config);
// Parses a 16-bit TMP117 configuration register value.
//
// # Returns
//
// [`PamojaStatus::Ok`], with `*out_config` filled in. Every register value
// decodes, so this fails only on a null pointer.
//
// # Safety
//
// `out_config` must point to a writable `PamojaTmp117Config`.
PamojaStatus pamoja_tmp117_config_from_bits(uint16_t bits, PamojaTmp117Config *out_config);
// Returns how many conversions a TMP117 averaging code folds into one result.
//
// # Returns
//
// The conversion count: 1, 8, 32, or 64.
uint8_t pamoja_tmp117_averaging_conversions(uint8_t code);
// Returns how long a TMP117 averaging code takes to convert.
//
// # Returns
//
// The conversion time in microseconds.
uint32_t pamoja_tmp117_averaging_micros(uint8_t code);
// Returns the nominal cycle a TMP117 conversion-cycle code selects.
//
// # Returns
//
// The cycle in microseconds, before the averaging setting extends it.
uint32_t pamoja_tmp117_cycle_nominal_micros(uint8_t code);
// Returns how often a TMP117 updates its result for a cycle and averaging code.
//
// # Returns
//
// The longer of the nominal cycle and the time the averaging takes.
uint32_t pamoja_tmp117_cycle_micros(uint8_t cycle, uint8_t averaging);
// Converts a raw HDC1080 temperature register to milli-degrees Celsius.
//
// # Returns
//
// The temperature, exact in integer arithmetic.
int32_t pamoja_hdc1080_milli_celsius(uint16_t raw);
// Converts a raw HDC1080 temperature register to degrees Celsius.
//
// # Returns
//
// The temperature.
float pamoja_hdc1080_celsius(uint16_t raw);
// Converts a raw HDC1080 humidity register to milli-percent.
//
// # Returns
//
// The relative humidity, exact in integer arithmetic.
uint32_t pamoja_hdc1080_milli_percent(uint16_t raw);
// Converts a raw HDC1080 humidity register to a relative humidity percentage.
//
// # Returns
//
// The relative humidity.
float pamoja_hdc1080_relative_humidity(uint16_t raw);
// Builds the HDC1080 temperature register that decodes to a temperature.
//
// # Returns
//
// The 14-bit code in bits 15:2, clamped to the part's range.
uint16_t pamoja_hdc1080_temperature_register(int32_t milli_celsius);
// Builds the HDC1080 humidity register that decodes to a relative humidity.
//
// # Returns
//
// The 14-bit code in bits 15:2, clamped to full scale.
uint16_t pamoja_hdc1080_humidity_register(uint32_t milli_percent);
// Joins the three HDC1080 serial-ID registers into the 40-bit serial number.
//
// # Returns
//
// The serial number.
uint64_t pamoja_hdc1080_serial_id(uint16_t high, uint16_t mid, uint16_t low);
// Splits a serial number back into the three HDC1080 serial-ID registers.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the three registers written to
// `out_registers` high word first, or [`PamojaStatus::InvalidArgument`] if the
// pointer is null.
//
// # Safety
//
// `out_registers` must point to at least three writable `uint16_t` values.
PamojaStatus pamoja_hdc1080_serial_id_registers(uint64_t serial, uint16_t *out_registers);
// Parses the four bytes an HDC1080 sequential read returns.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_measurement` filled in, or
// [`PamojaStatus::InvalidArgument`] if the buffer is not four bytes. The part
// sends no checksum, so a well-sized read always decodes.
//
// # Safety
//
// `bytes` must point to at least `bytes_len` readable bytes, and
// `out_measurement` must point to a writable `PamojaHdc1080Measurement`.
PamojaStatus pamoja_hdc1080_parse_measurement(const uint8_t *bytes,
                                              uintptr_t bytes_len,
                                              PamojaHdc1080Measurement *out_measurement);
// Builds the HDC1080 measurement a sensor reporting these physical values would send.
//
// # Returns
//
// [`PamojaStatus::Ok`], with `*out_measurement` filled in, or
// [`PamojaStatus::InvalidArgument`] if the pointer is null.
//
// # Safety
//
// `out_measurement` must point to a writable `PamojaHdc1080Measurement`.
PamojaStatus pamoja_hdc1080_measurement_from_physical(int32_t milli_celsius,
                                                      uint32_t milli_percent,
                                                      PamojaHdc1080Measurement *out_measurement);
// Builds the four bytes an HDC1080 sends for a pair of raw registers.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with the four bytes written to `out_bytes`,
// or [`PamojaStatus::InvalidArgument`] if `out_bytes` is null.
//
// # Safety
//
// `out_bytes` must point to at least four writable bytes.
PamojaStatus pamoja_hdc1080_measurement_bytes(uint16_t temperature_raw,
                                              uint16_t humidity_raw,
                                              uint8_t *out_bytes);
// Parses an HDC1080 configuration register value.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_config` filled in, or
// [`PamojaStatus::Codec`] if the humidity-resolution field carries the code the
// datasheet leaves undefined, which means the value did not come from a working
// part.
//
// # Safety
//
// `out_config` must point to a writable `PamojaHdc1080Config`.
PamojaStatus pamoja_hdc1080_config_from_register(uint16_t raw, PamojaHdc1080Config *out_config);
// Assembles an HDC1080 configuration register value.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_register` set, or
// [`PamojaStatus::InvalidArgument`] if either resolution is not one the part
// offers.
//
// # Safety
//
// `out_register` must point to a writable `uint16_t`.
PamojaStatus pamoja_hdc1080_config_to_register(PamojaHdc1080Config config, uint16_t *out_register);
// Returns how long to wait after triggering an HDC1080 in a configuration.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_micros` set, or
// [`PamojaStatus::InvalidArgument`] if either resolution is not one the part
// offers.
//
// # Safety
//
// `out_micros` must point to a writable `uint32_t`.
PamojaStatus pamoja_hdc1080_conversion_time_micros(PamojaHdc1080Config config,
                                                   uint32_t *out_micros);
// Returns how long an HDC1080 temperature conversion takes at a resolution.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_micros` set, or
// [`PamojaStatus::InvalidArgument`] if `bits` is not 14 or 11.
//
// # Safety
//
// `out_micros` must point to a writable `uint32_t`.
PamojaStatus pamoja_hdc1080_temperature_conversion_micros(uint8_t bits, uint32_t *out_micros);
// Returns how long an HDC1080 humidity conversion takes at a resolution.
//
// # Returns
//
// [`PamojaStatus::Ok`] on success, with `*out_micros` set, or
// [`PamojaStatus::InvalidArgument`] if `bits` is not 14, 11, or 8.
//
// # Safety
//
// `out_micros` must point to a writable `uint32_t`.
PamojaStatus pamoja_hdc1080_humidity_conversion_micros(uint8_t bits, uint32_t *out_micros);
// Returns the illuminance one count carries at an OPT3001 exponent.
//
// # Returns
//
// `true` when the exponent is one the part defines, with `*out_milli_lux` set to
// the step; `false` for a reserved exponent.
//
// # Safety
//
// `out_milli_lux` must point to a writable `uint32_t`.
bool pamoja_opt3001_lsb_milli_lux(uint8_t exponent, uint32_t *out_milli_lux);
// Returns the full scale an OPT3001 range number covers.
//
// # Returns
//
// `true` when the range is one the part defines, with `*out_milli_lux` set to
// the full scale; `false` for a reserved range number, which has none.
//
// # Safety
//
// `out_milli_lux` must point to a writable `uint32_t`.
bool pamoja_opt3001_full_scale_milli_lux(uint8_t range_number, uint32_t *out_milli_lux);
// Converts a raw OPT3001 result register to milli-lux.
//
// # Returns
//
// The illuminance, exact in integer arithmetic.
uint32_t pamoja_opt3001_milli_lux(uint16_t raw);
// Converts a raw OPT3001 result register to lux.
//
// # Returns
//
// The illuminance.
float pamoja_opt3001_lux(uint16_t raw);