bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.Sensing.cs


    /// <summary>
    /// Reports whether a TMP117 configuration register flags a high alert. # Returns true
    /// when a result went above the high limit.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_tmp117_high_alert(ushort config);

    /// <summary>
    /// Reports whether a TMP117 configuration register flags a low alert. # Returns true
    /// when a result went below the low limit.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_tmp117_low_alert(ushort config);

    /// <summary>
    /// Reports whether a TMP117 configuration register says a result is ready. # Returns
    /// true when a conversion completed since the register was last read.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_tmp117_data_ready(ushort config);

    /// <summary>
    /// Reports whether a TMP117 configuration register says an EEPROM write is running. #
    /// Returns true while the write is in progress.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_tmp117_eeprom_busy(ushort config);

    /// <summary>
    /// Reports whether a TMP117 EEPROM unlock register says a write is running. # Returns
    /// true while the write is in progress.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_tmp117_eeprom_unlock_busy(ushort unlock);

    /// <summary>
    /// Assembles the 16-bit TMP117 configuration register value. # Returns The register
    /// value to write.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_tmp117_config_bits(PamojaTmp117Config config);

    /// <summary>
    /// Parses a 16-bit TMP117 configuration register value. # Returns [PamojaStatus::Ok],
    /// with *out_config filled in. Every register value decodes, so this fails only on a
    /// null pointer. # Safety out_config must point to a writable PamojaTmp117Config.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_tmp117_config_from_bits(
        ushort bits,
        out PamojaTmp117Config outConfig);

    /// <summary>
    /// Returns how many conversions a TMP117 averaging code folds into one result. #
    /// Returns The conversion count: 1, 8, 32, or 64.
    /// </summary>
    [LibraryImport(Library)]
    public static partial byte pamoja_tmp117_averaging_conversions(byte code);

    /// <summary>
    /// Returns how long a TMP117 averaging code takes to convert. # Returns The conversion
    /// time in microseconds.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_tmp117_averaging_micros(byte code);

    /// <summary>
    /// Returns the nominal cycle a TMP117 conversion-cycle code selects. # Returns The
    /// cycle in microseconds, before the averaging setting extends it.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_tmp117_cycle_nominal_micros(byte code);

    /// <summary>
    /// Returns how often a TMP117 updates its result for a cycle and averaging code. #
    /// Returns The longer of the nominal cycle and the time the averaging takes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_tmp117_cycle_micros(
        byte cycle,
        byte averaging);

    /// <summary>
    /// Converts a raw HDC1080 temperature register to milli-degrees Celsius. # Returns The
    /// temperature, exact in integer arithmetic.
    /// </summary>
    [LibraryImport(Library)]
    public static partial int pamoja_hdc1080_milli_celsius(ushort raw);

    /// <summary>
    /// Converts a raw HDC1080 temperature register to degrees Celsius. # Returns The
    /// temperature.
    /// </summary>
    [LibraryImport(Library)]
    public static partial float pamoja_hdc1080_celsius(ushort raw);

    /// <summary>
    /// Converts a raw HDC1080 humidity register to milli-percent. # Returns The relative
    /// humidity, exact in integer arithmetic.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_hdc1080_milli_percent(ushort raw);

    /// <summary>
    /// Converts a raw HDC1080 humidity register to a relative humidity percentage. #
    /// Returns The relative humidity.
    /// </summary>
    [LibraryImport(Library)]
    public static partial float pamoja_hdc1080_relative_humidity(ushort raw);

    /// <summary>
    /// Builds the HDC1080 temperature register that decodes to a temperature. # Returns The
    /// 14-bit code in bits 15:2, clamped to the part's range.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_hdc1080_temperature_register(int milliCelsius);

    /// <summary>
    /// Builds the HDC1080 humidity register that decodes to a relative humidity. # Returns
    /// The 14-bit code in bits 15:2, clamped to full scale.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_hdc1080_humidity_register(uint milliPercent);

    /// <summary>
    /// Joins the three HDC1080 serial-ID registers into the 40-bit serial number. # Returns
    /// The serial number.
    /// </summary>
    [LibraryImport(Library)]
    public static partial ulong pamoja_hdc1080_serial_id(
        ushort high,
        ushort mid,
        ushort low);

    /// <summary>
    /// Splits a serial number back into the three HDC1080 serial-ID registers. # Returns
    /// [PamojaStatus::Ok] on success, with the three registers written to out_registers
    /// high word first, or [PamojaStatus::InvalidArgument] if the pointer is null. # Safety
    /// out_registers must point to at least three writable uint16_t values.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_serial_id_registers(
        ulong serial,
        out ushort outRegisters);

    /// <summary>
    /// Parses the four bytes an HDC1080 sequential read returns. # Returns
    /// [PamojaStatus::Ok] on success, with *out_measurement filled in, or
    /// [PamojaStatus::InvalidArgument] if the buffer is not four bytes. The part sends no
    /// checksum, so a well-sized read always decodes. # Safety bytes must point to at least
    /// bytes_len readable bytes, and out_measurement must point to a writable
    /// PamojaHdc1080Measurement.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_parse_measurement(
        ReadOnlySpan<byte> bytes,
        nuint bytesLen,
        out PamojaHdc1080Measurement outMeasurement);

    /// <summary>
    /// Builds the HDC1080 measurement a sensor reporting these physical values would send.
    /// # Returns [PamojaStatus::Ok], with *out_measurement filled in, or
    /// [PamojaStatus::InvalidArgument] if the pointer is null. # Safety out_measurement
    /// must point to a writable PamojaHdc1080Measurement.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_measurement_from_physical(
        int milliCelsius,
        uint milliPercent,
        out PamojaHdc1080Measurement outMeasurement);

    /// <summary>
    /// Builds the four bytes an HDC1080 sends for a pair of raw registers. # Returns
    /// [PamojaStatus::Ok] on success, with the four bytes written to out_bytes, or
    /// [PamojaStatus::InvalidArgument] if out_bytes is null. # Safety out_bytes must point
    /// to at least four writable bytes.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_measurement_bytes(
        ushort temperatureRaw,
        ushort humidityRaw,
        Span<byte> outBytes);

    /// <summary>
    /// Parses an HDC1080 configuration register value. # Returns [PamojaStatus::Ok] on
    /// success, with *out_config filled in, or [PamojaStatus::Codec] if the
    /// humidity-resolution field carries the code the datasheet leaves undefined, which
    /// means the value did not come from a working part. # Safety out_config must point to
    /// a writable PamojaHdc1080Config.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_config_from_register(
        ushort raw,
        out PamojaHdc1080Config outConfig);

    /// <summary>
    /// Assembles an HDC1080 configuration register value. # Returns [PamojaStatus::Ok] on
    /// success, with *out_register set, or [PamojaStatus::InvalidArgument] if either
    /// resolution is not one the part offers. # Safety out_register must point to a
    /// writable uint16_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_config_to_register(
        PamojaHdc1080Config config,
        out ushort outRegister);

    /// <summary>
    /// Returns how long to wait after triggering an HDC1080 in a configuration. # Returns
    /// [PamojaStatus::Ok] on success, with *out_micros set, or
    /// [PamojaStatus::InvalidArgument] if either resolution is not one the part offers. #
    /// Safety out_micros must point to a writable uint32_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_conversion_time_micros(
        PamojaHdc1080Config config,
        out uint outMicros);

    /// <summary>
    /// Returns how long an HDC1080 temperature conversion takes at a resolution. # Returns
    /// [PamojaStatus::Ok] on success, with *out_micros set, or
    /// [PamojaStatus::InvalidArgument] if bits is not 14 or 11. # Safety out_micros must
    /// point to a writable uint32_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_temperature_conversion_micros(
        byte bits,
        out uint outMicros);

    /// <summary>
    /// Returns how long an HDC1080 humidity conversion takes at a resolution. # Returns
    /// [PamojaStatus::Ok] on success, with *out_micros set, or
    /// [PamojaStatus::InvalidArgument] if bits is not 14, 11, or 8. # Safety out_micros
    /// must point to a writable uint32_t.
    /// </summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_humidity_conversion_micros(
        byte bits,
        out uint outMicros);

    /// <summary>
    /// Returns the illuminance one count carries at an OPT3001 exponent. # Returns true
    /// when the exponent is one the part defines, with *out_milli_lux set to the step;
    /// false for a reserved exponent. # Safety out_milli_lux must point to a writable
    /// uint32_t.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_opt3001_lsb_milli_lux(
        byte exponent,
        out uint outMilliLux);

    /// <summary>
    /// Returns the full scale an OPT3001 range number covers. # Returns true when the range
    /// is one the part defines, with *out_milli_lux set to the full scale; false for a
    /// reserved range number, which has none. # Safety out_milli_lux must point to a
    /// writable uint32_t.
    /// </summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_opt3001_full_scale_milli_lux(
        byte rangeNumber,
        out uint outMilliLux);

    /// <summary>
    /// Converts a raw OPT3001 result register to milli-lux. # Returns The illuminance,
    /// exact in integer arithmetic.
    /// </summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_opt3001_milli_lux(ushort raw);

    /// <summary>Converts a raw OPT3001 result register to lux. # Returns The illuminance.</summary>
    [LibraryImport(Library)]
    public static partial float pamoja_opt3001_lux(ushort raw);
